[project]
name = "tenauth"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.0",
    "sqlmodel>=0.0.27",
]

[tool.setuptools.package-dir]
    "" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["tenauth*", "your_app_package*"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyrefly>=0.36.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
